slight fix to poster and footer on mobile

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -37,6 +37,7 @@ footer {
 
     @media (max-width: 600px) {
         padding: 0 30px;
+        font-size: $font-extra-small;
     }
 }
 
