--- a/src/components/MovieFullInfo/PosterSection/PosterSection.module.scss
+++ b/src/components/MovieFullInfo/PosterSection/PosterSection.module.scss
@@ -39,7 +39,7 @@
     }
 
     @media (max-width: 1000px) {
-        margin: 0 50px;
+        padding: 0;
 
         img {
             width: 360px;
@@ -63,7 +63,7 @@
         }
 
         img {
-            width: 250px;
+            width: 230px;
         }
     }
 }
